unpackaged/main/default/objects/pse__Expense_Report__c/fields/FFX_Expense_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>FFX_Expense_Report_Number__c</fullName>
    <displayFormat>ER-{00000}</displayFormat>
    <label>Expense Report Number</label>
    <type>AutoNumber</type>
</CustomField>