unpackaged/main/default/objects/pse__Expense_Report__c/fields/msg_link_EXRPCN_state__c.field-meta.xml
<CustomField>
    <fullName>msg_link_EXRPCN_state__c</fullName>
    <label>FDN State (PCN)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>