unpackaged/main/default/objects/pse__Expense_Report__c/fields/msg_link_EXRPIN_errors__c.field-meta.xml
<CustomField>
    <fullName>msg_link_EXRPIN_errors__c</fullName>
    <label>FDN Errors (PIN)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>