unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Billable__c.field-meta.xml
<CustomField>
    <fullName>pse__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>