unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Disable_Approval_Auto_Submit__c.field-meta.xml
<CustomField>
    <fullName>pse__Disable_Approval_Auto_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this should disable any PSA trigger-based automatic submit for approval for the Expense Report.</description>
    <inlineHelpText>If checked, this should disable any PSA trigger-based automatic submit for approval for the Expense Report.</inlineHelpText>
    <label>Disable Approval Auto Submit</label>
    <type>Checkbox</type>
</CustomField>