unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Exclude_from_Billing__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_from_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will by default check the Exclude from Billing checkbox on child Expenses, which has the same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</description>
    <inlineHelpText>If checked, will by default check the Exclude from Billing checkbox on child Expenses, which has the same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</inlineHelpText>
    <label>Exclude from Billing</label>
    <type>Checkbox</type>
</CustomField>