unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Milestone__c.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.pse__Project__c</valueField>
        </filterItems>
        <infoMessage>The milestones of the related project are shown initially.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Expense Reports</relationshipLabel>
    <relationshipName>Expense_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>