unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Override_Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overrides the Group to which the child Expense Transactions will roll up for Group Actuals, even if the Project is in a different Group. Typically an Expense's Transactions roll up to its Project's or Resource's Group based on 'follows' rules. Note that either way, the Transactions will continue to roll up to the same Project's Project Actuals.</description>
    <inlineHelpText>Overrides the Group to which the child Expense Transactions will roll up for Group Actuals, even if the Project is in a different Group. Typically an Expense's Transactions roll up to its Project's or Resource's Group based on 'follows' rules.</inlineHelpText>
    <label>Override Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Override Group For Expense Reports</relationshipLabel>
    <relationshipName>Override_Group_For_Expense_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>