unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Override_Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overrides the Practice to which the child Expense Transactions will roll up for Practice Actuals, even if the Project is in a different Practice. Typically an Expense's Transactions roll up to its Project's or Resource's Practice based on 'follows' rules. Note that either way, the Transactions will continue to roll up to the same Project's Project Actuals.</description>
    <inlineHelpText>Overrides the Practice to which the child Expense Transactions will roll up for Practice Actuals, even if the Project is in a different Practice. Typically an Expense's Transactions roll up to its Project's or Resource's Practice based on 'follows' rules.</inlineHelpText>
    <label>Override Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Override Practice For Expense Reports</relationshipLabel>
    <relationshipName>Override_Practice_For_Expense_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>