unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Override_Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overrides the Region to which the child Expense Transactions will roll up for Regional Actuals, even if the Project is in a different Region. Typically an Expense's Transactions roll up to its Project's or Resource's Region based on 'follows' rules. Note that either way, the Transactions will continue to roll up to the same Project's Project Actuals.</description>
    <inlineHelpText>Overrides the Region to which the child Expense Transactions will roll up for Regional Actuals, even if the Project is in a different Region. Typically an Expense's Transactions roll up to its Project's or Resource's Region based on 'follows' rules.</inlineHelpText>
    <label>Override Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Override Region For Expense Reports</relationshipLabel>
    <relationshipName>Override_Region_For_Expense_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>