unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Project_Expense_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Expense_Notes__c</fullName>
    <formula>IF(ISNULL(pse__Project__r.pse__Expense_Notes__c),'',pse__Project__r.pse__Expense_Notes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Expense Notes</label>
    <type>Text</type>
</CustomField>