unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Reimbursement_Currency__c.field-meta.xml
<CustomField>
    <fullName>pse__Reimbursement_Currency__c</fullName>
    <description>This field shows the 3-character currency code for the Resource being reimbursed.</description>
    <inlineHelpText>This field shows the 3-character currency code for the Resource being reimbursed.</inlineHelpText>
    <label>Reimbursement Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>