unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Third_Party_Expenses_App_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Third_Party_Expenses_App_Report_ID__c</fullName>
    <description>The ID of the Expense Report from the Third-Party Expenses Application.</description>
    <inlineHelpText>The ID of the Expense Report from the Third-Party Expenses Application.</inlineHelpText>
    <label>Third-Party Expenses App Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>