unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Total_Non_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Non_Billable_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Non-Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>