unpackaged/main/default/objects/pse__Expense_Report__c/fields/pse__Total_Reimbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Reimbursement_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This number shows the total reimbursement amount in the Resource's currency.</description>
    <inlineHelpText>This number shows the total reimbursement amount in the Resource's currency.</inlineHelpText>
    <label>Total Reimbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>