unpackaged/main/default/objects/pse__Expense_Report__c/validationRules/pse__ExpenseReport_Asgnmt_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__ExpenseReport_Asgnmt_Project_Mismatch</fullName>
    <active>true</active>
    <description>Assignment Project must match Expense Report Project.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),NOT(ISNULL(pse__Assignment__r.pse__Project__c)),(pse__Assignment__r.pse__Project__c &lt;&gt; ''),(pse__Project__c &lt;&gt; pse__Assignment__r.pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Assignment Project must match Expense Report Project.</errorMessage>
</ValidationRule>