unpackaged/main/default/objects/pse__Expense_Report__c/validationRules/pse__ExpenseReport_Asgnmt_Resource_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__ExpenseReport_Asgnmt_Resource_Mismatch</fullName>
    <active>true</active>
    <description>Assignment Resource must match Expense Report Resource.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),(pse__Assignment__c &lt;&gt; ''),NOT(ISNULL(pse__Assignment__r.pse__Resource__c)),(pse__Assignment__r.pse__Resource__c &lt;&gt; ''),(pse__Resource__c &lt;&gt; pse__Assignment__r.pse__Resource__c))</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Assignment Resource must match Expense Report Resource.</errorMessage>
</ValidationRule>