unpackaged/main/default/objects/pse__Expense_Report__c/validationRules/pse__ExpenseReport_Milestone_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__ExpenseReport_Milestone_Project_Mismatch</fullName>
    <active>true</active>
    <description>Milestone Project must match Expense Report Project.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Milestone__c)),NOT(ISNULL(pse__Milestone__r.pse__Project__c)),(pse__Milestone__r.pse__Project__c &lt;&gt; ''),(pse__Project__c &lt;&gt; pse__Milestone__r.pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Milestone__c</errorDisplayField>
    <errorMessage>Milestone Project must match Expense Report Project.</errorMessage>
</ValidationRule>