unpackaged/main/default/objects/pse__Expense_Report__c/validationRules/pse__ExpenseRpt_Methodology_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__ExpenseRpt_Methodology_Project_Mismatch</fullName>
    <active>true</active>
    <description>Validates whether the methodology selected on a expense report belongs to the same project as the expense report.</description>
    <errorConditionFormula>AND(NOT(ISNULL( pse__Project_Methodology__c )),(pse__Project_Methodology__c &lt;&gt; ''),NOT(ISNULL(pse__Project_Methodology__r.pse__Project__c)),(pse__Project_Methodology__r.pse__Project__c &lt;&gt; ''),(pse__Project__c &lt;&gt; pse__Project_Methodology__r.pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Project_Methodology__c</errorDisplayField>
    <errorMessage>Cannot associate the methodology with this expense report. The methodology must belong to the same project as the expense report. Select a methodology that belongs to the same project as the expense report.</errorMessage>
</ValidationRule>