unpackaged/main/default/objects/pse__Expense_Report__c/listViews/FFX_Finance_Expense_Approval_Expense_Report.listView-meta.xml
<ListView>
    <fullName>FFX_Finance_Expense_Approval_Expense_Report</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Finance Expense Approval</label>
    <queue>FFX_Finance_Expense_Approval</queue>
</ListView>